Fix aplication.properties encoding to UTF-8

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.jpa.show-sql=true
 # Port du serveur
 server.port=8081
 
-# Clé publique
+# ClÃ© publique
 rsa.public-key=classpath:static/sertification/public_key.pem
