update Mysql config for Jenkins

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=gestion_des_prestation
 
 # Configuration MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/marsa_maroc?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=jenkins
+spring.datasource.password=JenkinsPass123!
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
