--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 spring.application.name=gestion_des_prestation
 
 # Configuration MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/marsa_maroc?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/marsa_maroc?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/marsa_maroc?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=jenkins
 spring.datasource.password=JenkinsPass123!
 
